clusters/run/cluster-config/post-install/scg-operator-ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scg-openapi-ingress
  namespace: spring-cloud-gateway
spec:
  virtualhost:
    fqdn: scg-openapi.run.prep.tapsme.org
    tls:
      secretName: scg-openapi-ingress-cert
  routes:
  - services:
    - name: scg-operator
      port: 80
